Fixed some layout bugs

--- a/app/core/components/NavBar/navbar.module.scss
+++ b/app/core/components/NavBar/navbar.module.scss
@@ -1,5 +1,6 @@
 .container {
   position: fixed;
+  z-index: 20;
   top: 0%;
   display: flex;
   flex-direction: row;
